content/cli/v12/commands/npm-start.mdx
---
title: npm-start
section: 1
description: Start a package
github_repo: npm/cli
github_branch: latest
github_path: docs/lib/content/commands/npm-start.md
redirect_from:
  - /cli-commands/npm-start
  - /cli-commands/start
  - /cli-documentation/cli-commands/npm-start
  - /cli-documentation/cli-commands/start
  - /cli-documentation/commands/npm-start
  - /cli-documentation/commands/start
  - /cli-documentation/npm-start
  - /cli-documentation/start
  - /cli-documentation/v12/cli-commands/npm-start
  - /cli-documentation/v12/cli-commands/start
  - /cli-documentation/v12/commands/npm-start
  - /cli-documentation/v12/commands/start
  - /cli-documentation/v12/npm-start
  - /cli-documentation/v12/start
  - /cli/cli-commands/npm-start
  - /cli/cli-commands/start
  - /cli/commands/npm-start
  - /cli/commands/start
  - /cli/npm-start
  - /cli/start
  - /cli/v12/cli-commands/npm-start
  - /cli/v12/cli-commands/start
  - /cli/v12/commands/start
  - /cli/v12/npm-start
  - /cli/v12/start
  - /commands/npm-start
  - /commands/start
---

### Synopsis

```bash
npm start [-- <args>]
```

### Description

This runs a predefined command specified in the `"start"` property of a package's `"scripts"` object.

If the `"scripts"` object does not define a `"start"` property, npm will run `node server.js`.

Note that this is different from the default node behavior of running the file specified in a package's `"main"` attribute when evoking with `node .`

As of [`npm@2.0.0`](https://blog.npmjs.org/post/98131109725/npm-2-0-0), you can use custom arguments when executing scripts. Refer to [`npm run`](/cli/v12/commands/npm-run) for more details.

### Example

```json
{
  "scripts": {
    "start": "node foo.js"
  }
}
```

```bash
npm start

> npm@x.x.x start
> node foo.js

(foo.js output would be here)

```

### Configuration

#### `ignore-scripts`

- Default: false
- Type: Boolean

If true, npm does not run scripts specified in package.json files.

Note that commands explicitly intended to run a particular script, such as `npm start`, `npm stop`, `npm restart`, `npm test`, and `npm run` will still run their intended script if `ignore-scripts` is set, but they will _not_ run any pre- or post-scripts.

Setting `ignore-scripts` also disables `.npm-extension` execution, as if `ignore-extension` were set.

#### `script-shell`

- Default: '/bin/sh' on POSIX systems, 'cmd.exe' on Windows
- Type: null or String

The shell to use for scripts run with the `npm exec`, `npm run` and `npm init <package-spec>` commands.

### See Also

- [npm run](/cli/v12/commands/npm-run)
- [npm scripts](/cli/v12/using-npm/scripts)
- [npm test](/cli/v12/commands/npm-test)
- [npm restart](/cli/v12/commands/npm-restart)
- [npm stop](/cli/v12/commands/npm-stop)
